routing + minor changes

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,22 @@ header nav {
   padding: 1rem 2rem;
 }
 
+header .logo {
+  display: flex;
+  color: var(--warm-cream);
+  align-items: center;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 1.5rem;
+  justify-content: space-between;
+  width: 20%;
+}
+
+.logo h1 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
 header nav h1 {
   color: var(--warm-cream);
   font-size: 1.5rem;
